--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -1,3 +1,3 @@
 Okay
 
-<%= button_to '360', {controller: 'application', action: 'grab_dadi'}, method: :get%>
+<%= button_to '360', {controller: 'posts', action: 'index'}, method: :get%>
