add dadi360 house sale button and scafford, add dadi360 business transit scafford

--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -1,3 +1,7 @@
-Okay
+<h1>
+分类数据抓取页面
+</h1>
 
-<%= button_to '360', {controller: 'posts', action: 'index'}, method: :get%>
+<%= button_to '大地360-租房分类信息', {controller: 'posts', action: 'index'}, method: :get%>
+
+<%= button_to '大地360-房屋买卖分类信息', {controller: 'post_dd_housales', action: 'index'}, method: :get%>
