add dadi360 business transit model and change home page

--- a/app/views/post_dd_busitrans/index.html.erb
+++ b/app/views/post_dd_busitrans/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing post_dd_busitrans</h1>
 
-<table>
+<table border="1" width="1000" id='post_dd_busitran'>
   <thead>
     <tr>
       <th>Title</th>
@@ -39,6 +39,12 @@
     <% end %>
   </tbody>
 </table>
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#post_dd_busitran').dataTable();
+} );
+</script>
 
 <br>
 
