--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -2,6 +2,14 @@
 分类数据抓取页面
 </h1>
 
+<div style="float:left;"> 
 <%= button_to '大地360-租房分类信息', {controller: 'posts', action: 'index'}, method: :get%>
+</div>
 
+<div style="float:left;">
 <%= button_to '大地360-房屋买卖分类信息', {controller: 'post_dd_housales', action: 'index'}, method: :get%>
+</div>
+
+<div style="float:left;">
+<%= button_to '大地360-生意转让分类信息', {controller: 'post_dd_busitrans', action: 'index'}, method: :get%>
+</div>
