change form of list table

--- a/app/views/post_dd_housales/index.html.erb
+++ b/app/views/post_dd_housales/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing posts</h1>
+<h1>房屋出售</h1>
 
 <table border="1" width="1000" id='post_dd_housale'>
   <thead>
     <tr>
       <th>Title</th>
       <th>Ct name</th>
-      <th>Upload time</th>
+      <th>Up time</th>
       <th>Content</th>
       <th>Phone n</th>
       <th>Rent m</th>
