add dadi360 recruit model and home page button

--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -13,3 +13,7 @@
 <div style="float:left;">
 <%= button_to '大地360-生意转让分类信息', {controller: 'post_dd_busitrans', action: 'index'}, method: :get%>
 </div>
+
+<div style="float:left;">
+<%= button_to '大地360-招聘请人分类信息', {controller: 'post_recruits', action: 'index'}, method: :get%>
+</div>
