--- a/app/views/post_recruits/index.html.erb
+++ b/app/views/post_recruits/index.html.erb
@@ -1,18 +1,18 @@
-<h1>Listing post_recruits</h1>
+<h1>大地360-招聘求职</h1>
 
-<table>
+<table border="1" width="1000" id='post_recruit'>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Ct name</th>
-      <th>Unique code</th>
-      <th>Detail url</th>
-      <th>Upload time</th>
-      <th>Content</th>
-      <th>Phone n</th>
-      <th>Rent m</th>
-      <th>Site source</th>
-      <th>Up time</th>
+      <th>标题</th>
+      <th>公司类型</th>
+      <!-- <th>Unique code</th> -->
+      <!-- <th>Detail url</th> -->
+      <!-- <th>Upload time</th> -->
+      <th>内容</th>
+      <th>电话号码</th>
+      <th>工资</th>
+      <th>信息来源</th>
+      <th>发布时间</th>
       <th></th>
       <th></th>
       <th></th>
@@ -23,15 +23,25 @@
     <% @post_recruits.each do |post_recruit| %>
       <tr>
         <td><%= post_recruit.title %></td>
-        <td><%= post_recruit.ct_name %></td>
-        <td><%= post_recruit.unique_code %></td>
-        <td><%= post_recruit.detail_url %></td>
-        <td><%= post_recruit.upload_time %></td>
+		<% if post_recruit.ct_name == "Recruit employees" %>
+			<td style = "width:100px;">其他招聘</td>
+		<% elsif post_recruit.ct_name == "Restaurant" %>
+			<td style = "width:100px;">餐馆招聘</td>
+		<% elsif post_recruit.ct_name == "Nails and Barbor" %>	
+			<td style = "width:100px;">美容美甲招聘</td>
+		<% elsif post_recruit.ct_name == "Massage" %>	
+			<td style = "width:100px;">按摩请人</td>
+		<% else %>
+			<td style = "width:100px;"><%= post_recruit.ct_name %></td>
+		<% end %>
+        <!-- <td><%= post_recruit.unique_code %></td> -->
+        <!-- <td><%= post_recruit.detail_url %></td> -->
+        <!-- <td><%= post_recruit.upload_time %></td> -->
         <td><%= post_recruit.content %></td>
         <td><%= post_recruit.phone_n %></td>
         <td><%= post_recruit.rent_m %></td>
         <td><%= post_recruit.site_source %></td>
-        <td><%= post_recruit.up_time %></td>
+        <td><%= post_recruit.up_time.strftime("%F") %></td>
         <td><%= link_to 'Show', post_recruit %></td>
         <td><%= link_to 'Edit', edit_post_recruit_path(post_recruit) %></td>
         <td><%= link_to 'Destroy', post_recruit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -39,7 +49,11 @@
     <% end %>
   </tbody>
 </table>
-
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#post_recruit').dataTable();
+} );
+</script>
 <br>
 
 <%= link_to 'New Post recruit', new_post_recruit_path %>
