--- a/app/views/post_dd_cars/index.html.erb
+++ b/app/views/post_dd_cars/index.html.erb
@@ -1,18 +1,14 @@
-<h1>Listing post_dd_cars</h1>
+<h1>大地360-汽车买卖</h1>
 
-<table>
+<table border="1" width="1000" id='post_dd_car'>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Ct name</th>
-      <th>Unique code</th>
-      <th>Detail url</th>
-      <th>Upload time</th>
-      <th>Content</th>
-      <th>Phone n</th>
-      <th>Rent m</th>
-      <th>Site source</th>
-      <th>Up time</th>
+      <th>标题</th>
+      <th>发布时间</th>
+      <th>内容</th>
+      <th>电话</th>
+      <th>价格</th>
+      <th>发布来源</th>
       <th></th>
       <th></th>
       <th></th>
@@ -23,15 +19,11 @@
     <% @post_dd_cars.each do |post_dd_car| %>
       <tr>
         <td><%= post_dd_car.title %></td>
-        <td><%= post_dd_car.ct_name %></td>
-        <td><%= post_dd_car.unique_code %></td>
-        <td><%= post_dd_car.detail_url %></td>
-        <td><%= post_dd_car.upload_time %></td>
+		<td><%= post_dd_car.up_time.strftime("%F") %></td>
         <td><%= post_dd_car.content %></td>
         <td><%= post_dd_car.phone_n %></td>
         <td><%= post_dd_car.rent_m %></td>
         <td><%= post_dd_car.site_source %></td>
-        <td><%= post_dd_car.up_time %></td>
         <td><%= link_to 'Show', post_dd_car %></td>
         <td><%= link_to 'Edit', edit_post_dd_car_path(post_dd_car) %></td>
         <td><%= link_to 'Destroy', post_dd_car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -39,6 +31,12 @@
     <% end %>
   </tbody>
 </table>
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#post_dd_car').dataTable();
+} );
+</script>
 
 <br>
 
