--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -17,3 +17,7 @@
 <div style="float:left;">
 <%= button_to '大地360-招聘请人分类信息', {controller: 'post_recruits', action: 'index'}, method: :get%>
 </div>
+
+<div style="float:left;">
+<%= button_to '大地360-汽车买卖分类信息', {controller: 'post_dd_cars', action: 'index'}, method: :get%>
+</div>
