--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -2,22 +2,32 @@
 分类数据抓取页面
 </h1>
 
-<div style="float:left;"> 
-<%= button_to '大地360-租房分类信息', {controller: 'posts', action: 'index'}, method: :get%>
-</div>
+<table>
+	<tr>
+		<td>
+			<%= button_to '大地360-租房分类信息', {controller: 'posts', action: 'index'}, method: :get%>
+		</td>
+		
+		<td>
+			<%= button_to '大地360-房屋买卖分类信息', {controller: 'post_dd_housales', action: 'index'}, method: :get%>
+		</td>
 
-<div style="float:left;">
-<%= button_to '大地360-房屋买卖分类信息', {controller: 'post_dd_housales', action: 'index'}, method: :get%>
-</div>
+		<td>
+			<%= button_to '大地360-生意转让分类信息', {controller: 'post_dd_busitrans', action: 'index'}, method: :get%>
+		</td>
 
-<div style="float:left;">
-<%= button_to '大地360-生意转让分类信息', {controller: 'post_dd_busitrans', action: 'index'}, method: :get%>
-</div>
+		<td>
+			<%= button_to '大地360-招聘请人分类信息', {controller: 'post_recruits', action: 'index'}, method: :get%>
+		</td>
 
-<div style="float:left;">
-<%= button_to '大地360-招聘请人分类信息', {controller: 'post_recruits', action: 'index'}, method: :get%>
-</div>
-
-<div style="float:left;">
-<%= button_to '大地360-汽车买卖分类信息', {controller: 'post_dd_cars', action: 'index'}, method: :get%>
-</div>
+		<td>
+			<%= button_to '大地360-汽车买卖分类信息', {controller: 'post_dd_cars', action: 'index'}, method: :get%>
+		</td>
+	</tr>
+	
+	<tr>
+		<td>
+			<%= button_to '美国生活在线-房屋买卖', {controller: 'post_ulo_housrents', action: 'index'}, method: :get%>
+		</td>
+	</tr>
+</table>
