modify index pages

--- a/app/views/post_dd_cars/index.html.erb
+++ b/app/views/post_dd_cars/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= post_dd_car.title %></td>
 		<td><%= post_dd_car.up_time.strftime("%F") %></td>
         <td><%= post_dd_car.content %></td>
-        <td><%= post_dd_car.phone_n %></td>
+        <td style="width:100px"><%= post_dd_car.phone_n %></td>
         <td><%= post_dd_car.rent_m %></td>
         <td><%= post_dd_car.site_source %></td>
         <td><%= link_to 'Show', post_dd_car %></td>
