--- a/app/views/post_ulo_housrents/index.html.erb
+++ b/app/views/post_ulo_housrents/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= post_ulo_housrent.title %></td>
 		<td><%= post_ulo_housrent.up_time.strftime("%F") %></td>
         <td><%= post_ulo_housrent.content %></td>
-        <td style='width:100px'><%= post_ulo_housrent.phone_n %></td>
+        <td style='width:100px;'><%= post_ulo_housrent.phone_n %></td>
         <td><%= post_ulo_housrent.rent_m %></td>
         <td><%= link_to 'Show', post_ulo_housrent %></td>
         <td><%= link_to 'Edit', edit_post_ulo_housrent_path(post_ulo_housrent) %></td>
