--- a/app/views/post_dd_housales/index.html.erb
+++ b/app/views/post_dd_housales/index.html.erb
@@ -3,12 +3,11 @@
 <table border="1" width="1000" id='post_dd_housale'>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Ct name</th>
-      <th>Up time</th>
-      <th>Content</th>
-      <th>Phone n</th>
-      <th>Rent m</th>
+      <th>标题</th>
+      <th>发布时间</th>
+      <th>内容</th>
+      <th>联系电话</th>
+      <th>价格</th>
       <th></th>
       <th></th>
       <th></th>
@@ -19,11 +18,9 @@
     <% @post_dd_housales.each do |post_dd_housale| %>
       <tr>
 		<td><%= post_dd_housale.title %></td>
-    <!--    <td><%= post_dd_housale.detail_url %></td>  -->
-        <td><%= post_dd_housale.ct_name %></td>
         <td><%= post_dd_housale.up_time.strftime("%F") %></td>
         <td><%= post_dd_housale.content %></td>
-        <td><%= post_dd_housale.phone_n %></td>
+        <td style="width:100px;"><%= post_dd_housale.phone_n %></td>
         <td><%= post_dd_housale.rent_m %></td>
         <td><%= link_to 'Show', post_dd_housale %></td>
         <td><%= link_to 'Edit', edit_post_path(post_dd_housale) %></td>
