--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,14 @@
-<h1>租房信息</h1>
+<h1>大地360--租房信息</h1>
 
 <table border="1" width="1000" id='post'>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Ct name</th>
-      <th>Up time</th>
-      <th>Content</th>
-      <th>Phone n</th>
-      <th>Rent m</th>
+      <th>标题</th>
+      <th>区域</th>
+      <th>发布时间</th>
+      <th>内容</th>
+      <th>联系电话</th>
+      <th>价格</th>
       <th></th>
       <th></th>
       <th></th>
@@ -22,7 +22,7 @@
         <td><%= post.ct_name %></td>
         <td><%= post.up_time.strftime("%F") %></td>
         <td><%= post.content %></td>
-        <td><%= post.phone_n %></td>
+        <td style="width:100px;"><%= post.phone_n %></td>
         <td><%= post.rent_m %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
