--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -29,5 +29,9 @@
 		<td>
 			<%= button_to '美国生活在线-租房信息', {controller: 'post_ulo_housrents', action: 'index'}, method: :get%>
 		</td>
+		
+		<td>
+			<%= button_to '美国生活在线-房屋买卖', {controller: 'post_ulo_houesales', action: 'index'}, method: :get%>
+		</td>
 	</tr>
 </table>
