usa_life_online business transit post: Function Done

--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -33,5 +33,9 @@
 		<td>
 			<%= button_to '美国生活在线-房屋买卖', {controller: 'post_ulo_houesales', action: 'index'}, method: :get%>
 		</td>
+		
+		<td>
+			<%= button_to '美国生活在线-生意转让', {controller: 'post_ulo_busitrans', action: 'index'}, method: :get%>
+		</td>
 	</tr>
 </table>
