--- a/app/views/post_ulo_busitrans/index.html.erb
+++ b/app/views/post_ulo_busitrans/index.html.erb
@@ -1,18 +1,14 @@
-<h1>Listing post_ulo_busitrans</h1>
+<h1>美国生活在线--生意转让</h1>
 
-<table>
+<table border="1" width="1000" id='post_ulo_busitran'>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Ct name</th>
-      <th>Unique code</th>
-      <th>Detail url</th>
-      <th>Upload time</th>
-      <th>Content</th>
-      <th>Phone n</th>
-      <th>Rent m</th>
-      <th>Site source</th>
-      <th>Up time</th>
+      <th>标题</th>
+	  <th>发布时间</th>
+      <th>转让类型</th>
+      <th>内容</th>
+      <th>联系电话</th>
+      <th>工资</th>
       <th></th>
       <th></th>
       <th></th>
@@ -23,15 +19,23 @@
     <% @post_ulo_busitrans.each do |post_ulo_busitran| %>
       <tr>
         <td><%= post_ulo_busitran.title %></td>
-        <td><%= post_ulo_busitran.ct_name %></td>
-        <td><%= post_ulo_busitran.unique_code %></td>
-        <td><%= post_ulo_busitran.detail_url %></td>
-        <td><%= post_ulo_busitran.upload_time %></td>
+        <td><%= post_ulo_busitran.up_time.strftime("%F") %></td>
+		<% if post_ulo_busitran.ct_name == 'Restaurant' %>
+			<td style="width:100px;">餐馆转让</td>
+		<% elsif post_ulo_busitran.ct_name == 'Nails' %>
+			<td style="width:100px;">甲店转让</td>
+		<% elsif post_ulo_busitran.ct_name == 'Massage' %>
+			<td style="width:100px;">按摩店转让</td>
+		<% elsif post_ulo_busitran.ct_name == 'Laudary' %>
+			<td style="width:100px;">洗衣店转让</td>
+		<% elsif post_ulo_busitran.ct_name == 'Else' %>
+			<td style="width:100px;">其他</td>			
+		<% else %>
+			<td style="width:100px;"><%= post_ulo_busitran.ct_name %></td>
+		<% end %>		
         <td><%= post_ulo_busitran.content %></td>
-        <td><%= post_ulo_busitran.phone_n %></td>
+        <td style="width:100px;"><%= post_ulo_busitran.phone_n %></td>
         <td><%= post_ulo_busitran.rent_m %></td>
-        <td><%= post_ulo_busitran.site_source %></td>
-        <td><%= post_ulo_busitran.up_time %></td>
         <td><%= link_to 'Show', post_ulo_busitran %></td>
         <td><%= link_to 'Edit', edit_post_ulo_busitran_path(post_ulo_busitran) %></td>
         <td><%= link_to 'Destroy', post_ulo_busitran, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -40,6 +44,11 @@
   </tbody>
 </table>
 
+<script type="text/javascript">
+$(document).ready(function() {
+    $('#post_ulo_busitran').dataTable();
+} );
+</script>
 <br>
 
 <%= link_to 'New Post ulo busitran', new_post_ulo_busitran_path %>
