optimized code of grab dadi360 all models

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,15 @@
-<h1>大地360--租房信息</h1>
+<h1>大地360分类抓取结果页面</h1>
 
 <table border="1" width="1000" id='post'>
   <thead>
     <tr>
       <th>标题</th>
-      <th>区域</th>
+	  <th>分类名称</th>
+      <th>细类名称</th>
       <th>发布时间</th>
       <th>内容</th>
       <th>联系电话</th>
-      <th>价格</th>
+      <th>价格/工资</th>
       <th></th>
       <th></th>
       <th></th>
@@ -19,7 +20,39 @@
     <% @posts.each do |post| %>
       <tr>
    		<td><%= post.title %></td>
-        <td><%= post.ct_name %></td>
+		<% if post.site_source == "dadi_housrent_flushing"%>
+			<td>法拉盛租房</td>
+		<% elsif post.site_source == "dadi_housrent_manhattan"%>
+			<td>曼哈顿租房</td>
+		<% elsif post.site_source == "dadi_housrent_queens"%>
+			<td>皇后区租房</td>
+		<% elsif post.site_source == "dadi_housrent_brooklyn"%>
+			<td>布碌仑租房</td>
+		<% elsif post.site_source == "dadi_housrent_elmhurst"%>
+			<td>艾姆赫斯特租房</td>			
+		<% elsif post.site_source == "dadi_housale"%>
+			<td>房屋买卖</td>
+		<% elsif post.site_source == "dadi_recruit"%>
+			<td>招聘请人</td>
+		<% elsif post.site_source == "dadi_car"%>
+			<td>汽车买卖</td>
+		<% elsif post.site_source == "dadi_busitran"%>
+			<td>生意转让</td>
+		<% else %>
+			<td><%= post.site_source %></td>
+		<% end %>
+		
+		<% if post.ct_name == "Recruit employees" %>
+			<td style = "width:100px;">其他招聘</td>
+		<% elsif post.ct_name == "Restaurant" %>
+			<td style = "width:100px;">餐馆招聘</td>
+		<% elsif post.ct_name == "Nails and Barbor" %>	
+			<td style = "width:100px;">美容美甲招聘</td>
+		<% elsif post.ct_name == "Massage" %>	
+			<td style = "width:100px;">按摩请人</td>
+		<% else %>
+			<td style = "width:100px;"><%= post.ct_name %></td>
+		<% end %>
         <td><%= post.up_time.strftime("%F") %></td>
         <td><%= post.content %></td>
         <td style="width:100px;"><%= post.phone_n %></td>
