--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -9,37 +9,54 @@
 </h3>
 <%= select_tag "grab_lines", "<option>10</option><option>20</option><option>30</option><option>40</option><option>50</option>".html_safe %>
 <br/>
-
+<h3>
+大地360--抓取分类选择
+</h3>
+<%= select_tag "grab_source", "<option>法拉盛租房</option><option>曼哈顿租房</option><option>皇后区租房</option><option>布碌仑租房</option><option>艾姆赫斯特租房</option><option>房屋买卖</option><option>生意转让</option><option>招聘请人</option><option>汽车买卖</option>".html_safe %>
+<br/>
 <script>
   $('document').ready(function(){
-    $('form').append('<input id="default" type="hidden" name="post[grab_lines]" value="10">')
+    $('form').append('<input id="lines_id" type="hidden" name="post[grab_lines]" value="10">')
     $('#grab_lines').change(function(){
       var line_number = $('#grab_lines').val();
-      $('form input#default').empty();
-      $('form').append('<input type="hidden" name="post[grab_lines]" value="'+ line_number +'">')
+      $('form input#lines_id').remove();
+      $('form').append('<input id="lines_id" type="hidden" name="post[grab_lines]" value="'+ line_number +'">')
     });
   });
+  
+  $('document').ready(function(){
+	  $('form[action="/posts/grab_dadi"]').append('<input id="source_id" type="hidden" name="post[grab_source]" value="dadi_housrent">')
+
+	  $('#grab_source').change(function(){
+		  if ($('#grab_source').val() == "法拉盛租房")
+			var select_source = "dadi_housrent_flushing";
+		  else if ($('#grab_source').val() == "曼哈顿租房")
+			var select_source = "dadi_housrent_manhattan";
+		  else if ($('#grab_source').val() == "皇后区租房")
+			var select_source = "dadi_housrent_queens";
+		  else if ($('#grab_source').val() == "布碌仑租房")
+			var select_source = "dadi_housrent_brooklyn";
+		  else if ($('#grab_source').val() == "艾姆赫斯特租房")
+			var select_source = "dadi_housrent_elmhurst";
+		  else if ($('#grab_source').val() == "房屋买卖")
+			var select_source = "dadi_housale";
+		  else if ($('#grab_source').val() == "生意转让")
+			var select_source = "dadi_busitran";
+		  else if ($('#grab_source').val() == "招聘请人")
+			var select_source = "dadi_recruit";
+		  else if ($('#grab_source').val() == "汽车买卖")
+			var select_source = "dadi_car";
+		
+		  $('form input#source_id').remove();
+		  $('form[action="/posts/grab_dadi"]').append('<input id="source_id" type="hidden" name="post[grab_source]" value="'+ select_source +'">')
+	    });
+	});
 </script>
+
 <table>
 	<tr>
 		<td>
-      <%= button_to '大地360-租房信息', grab_dadi_posts_path, method: :post %>
-		</td>
-		
-		<td>
-			<%= button_to '大地360-房屋买卖', grab_dd_housale_post_dd_housales_path, method: :post%>
-		</td>
-
-		<td>
-			<%= button_to '大地360-生意转让', grab_dd_busitran_post_dd_busitrans_path, method: :post%>
-		</td>
-
-		<td>
-			<%= button_to '大地360-招聘请人', grab_dd_recruit_post_recruits_path, method: :post%>
-		</td>
-
-		<td>
-			<%= button_to '大地360-汽车买卖', grab_dd_car_post_dd_cars_path, method: :post%>
+			<%= button_to '大地360--开始抓取', grab_dadi_posts_path, method: :post %>
 		</td>
 	</tr>
 	
