--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -2,18 +2,6 @@
 <h1>
 分类数据抓取页面
 </h1>
-
-<br/>
-<h3>
-抓取行数
-</h3>
-<%= select_tag "grab_lines", "<option>10</option><option>20</option><option>30</option><option>40</option><option>50</option>".html_safe %>
-<br/>
-<h3>
-大地360--抓取分类选择
-</h3>
-<%= select_tag "grab_source", "<option>法拉盛租房</option><option>曼哈顿租房</option><option>皇后区租房</option><option>布碌仑租房</option><option>艾姆赫斯特租房</option><option>房屋买卖</option><option>生意转让</option><option>招聘请人</option><option>汽车买卖</option>".html_safe %>
-<br/>
 <script>
   $('document').ready(function(){
     $('form').append('<input id="lines_id" type="hidden" name="post[grab_lines]" value="10">')
@@ -25,7 +13,7 @@
   });
   
   $('document').ready(function(){
-	  $('form[action="/posts/grab_dadi"]').append('<input id="source_id" type="hidden" name="post[grab_source]" value="dadi_housrent">')
+	  $('form[action="/posts/grab_dadi"]').append('<input id="source_id" type="hidden" name="post[grab_source]" value="dadi_housrent_flushing">')
 
 	  $('#grab_source').change(function(){
 		  if ($('#grab_source').val() == "法拉盛租房")
@@ -46,31 +34,52 @@
 			var select_source = "dadi_recruit";
 		  else if ($('#grab_source').val() == "汽车买卖")
 			var select_source = "dadi_car";
+		  else 
+			var select_source = "dadi_housrent_flushing"
 		
 		  $('form input#source_id').remove();
 		  $('form[action="/posts/grab_dadi"]').append('<input id="source_id" type="hidden" name="post[grab_source]" value="'+ select_source +'">')
 	    });
+	});	
+		
+	$('document').ready(function(){
+	  $('form[action="/post_ulos/grab_ulo"]').append('<input id="source_ulo_id" type="hidden" name="post[grab_source]" value="ulo_housrent">')
+
+	  $('#grab_source_ulo').change(function(){
+		  if ($('#grab_source_ulo').val() == "租房信息")
+			var select_source = "ulo_housrent";
+		  else if ($('#grab_source_ulo').val() == "房屋买卖")
+			var select_source = "ulo_housale";
+		  else if ($('#grab_source_ulo').val() == "生意转让")
+			var select_source = "ulo_busitran";
+		  else if ($('#grab_source_ulo').val() == "招聘求职")
+			var select_source = "ulo_recruit";
+		  else 
+			var select_source = "ulo_housrent"
+		
+		  $('form input#source_ulo_id').remove();
+		  $('form[action="/post_ulos/grab_ulo"]').append('<input id="source_ulo_id" type="hidden" name="post[grab_source]" value="'+ select_source +'">')
+	    });
 	});
 </script>
+<br/>
+<h3>
+抓取行数
+</h3>
+<%= select_tag "grab_lines", "<option>10</option><option>20</option><option>30</option><option>40</option><option>50</option>".html_safe %>
+<br/>
 
-<table>
-	<tr>
-		<td>
-			<%= button_to '大地360--开始抓取', grab_dadi_posts_path, method: :post %>
-		</td>
-	</tr>
-	
-	<tr>
-		<td>
-			<%= button_to '美国生活在线-租房信息', grab_ulo_housrent_post_ulo_housrents_path, method: :post%>
-		</td>
-		
-		<td>
-			<%= button_to '美国生活在线-房屋买卖', grab_ulo_houesale_post_ulo_houesales_path, method: :post%>
-		</td>
-		
-		<td>
-			<%= button_to '美国生活在线-生意转让', grab_ulo_busitran_post_ulo_busitrans_path, method: :post%>
-		</td>
-	</tr>
-</table>
+<span>
+	<h3>大地360--抓取分类选择</h3>
+	<%= select_tag "grab_source", "<option>法拉盛租房</option><option>曼哈顿租房</option><option>皇后区租房</option><option>布碌仑租房</option><option>艾姆赫斯特租房</option><option>房屋买卖</option><option>生意转让</option><option>招聘请人</option><option>汽车买卖</option>".html_safe %>
+	<br/>
+	<%= button_to '大地360--开始抓取', grab_dadi_posts_path, method: :post %>
+</span>
+
+<span>	
+	<h3>美国生活在线--抓取分类选择</h3>
+	<%= select_tag "grab_source_ulo", "<option>租房信息</option><option>房屋买卖</option><option>生意转让</option><option>招聘求职</option>".html_safe %>
+	<br/>
+	<%= button_to '美国生活在线--开始抓取', grab_ulo_post_ulos_path, method: :post%>
+</span>
+
