--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -64,6 +64,9 @@
 </script>
 <br/>
 <h3>
+提示：如果抓取速度过慢，请耐心等待。如果没有找到你要内容，请多抓几次。
+<br/>
+<br/>
 抓取行数
 </h3>
 <%= select_tag "grab_lines", "<option>10</option><option>20</option><option>30</option><option>40</option><option>50</option>".html_safe %>
