add post button in table page

--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -60,6 +60,9 @@
 			<option value="dadi_housale">房屋买卖</option>
 			<option value="dadi_busitran">生意转让</option>
 			<option value="dadi_recruit">招聘请人</option>
+			<option value="dadi_restaurant_recruit">餐馆请人</option>
+			<option value="dadi_nails_recruit">甲店请人</option>
+			<option value="dadi_massage_recruit">按摩推拿请人</option>
 			<option value="dadi_car">汽车买卖</option>
 		</select>
 	</div>
